networking/vpc.tf
resource "aws_vpc" "jmccoytesting_opentofu_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.tags, {
    Name    = "jmccoytesting_opentofu_vpc"
  })
}
